--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta property="og:title" content="Exceptional Cleaning Services - 24/7 Professional Cleaning in Nigeria" />
     <meta property="og:description" content="Premium 24/7 cleaning services in Port Harcourt, Lagos, Delta, Bayelsa, Edo & Akwa Ibom. We don't just clean — we make it exceptional!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://HawaDigi.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@HawaDigi_dev" />
+    <meta name="twitter:image" content="https://HawaDigi.dev/opengraph-image-p98pqg.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
