--- a/index.html
+++ b/index.html
@@ -1,66 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Exceptional Cleaning Services - 24/7 Cleaning in Nigeria</title>
-  <meta name="description" content="Top-notch cleaning services in Port Harcourt, Lagos, Delta, Bayelsa, Edo & Akwa Ibom. Contact Exceptional Cleaning Services – Open 24/7." />
-  <meta name="author" content="HawaDigi Solution" />
-
-  <!-- Open Graph for social sharing -->
-  <meta property="og:title" content="Exceptional Cleaning Services - 24/7 Cleaning in Nigeria" />
-  <meta property="og:description" content="We don’t just clean — we make it exceptional!" />
-  <meta property="og:image" content="https://HawaDigi.dev/opengraph-image-p98pqg.png" />
-  <meta property="og:type" content="website" />
-
-  <!-- Twitter preview -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@HawaDigi_dev" />
-  <meta name="twitter:image" content="https://HawaDigi.dev/opengraph-image-p98pqg.png" />
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #e6f0ff;
-      color: #003366;
-      text-align: center;
-      padding: 40px;
-    }
-    h1 {
-      color: #004080;
-      font-size: 2.5em;
-    }
-    p {
-      font-size: 1.2em;
-    }
-    footer {
-      margin-top: 40px;
-      padding: 20px;
-      background-color: #cce0ff;
-      color: #003366;
-      font-size: 0.9em;
-    }
-    a {
-      color: #003366;
-      text-decoration: none;
-      margin: 0 8px;
-    }
-  </style>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <title>Exceptional Cleaning Services</title>
 </head>
 <body>
   <h1>Welcome to Exceptional Cleaning Services</h1>
-  <p>We provide 24/7 professional cleaning in Port Harcourt, Lagos, Delta, Bayelsa, Edo & Akwa Ibom.</p>
-  <p>Contact us now: <strong>09034290772</strong></p>
-
-  <footer>
-    <p>Website developed by <strong>HawaDigi Solution</strong></p>
-    <p>GRA Road, Ilorin, Nigeria</p>
-    <p>
-      <a href="https://www.facebook.com/share/1BC1VsxkYv/" target="_blank">Facebook</a> |
-      <a href="https://wa.me/2349034290772" target="_blank">WhatsApp</a> |
-      <a href="https://www.linkedin.com/in/tiamiyu-hawawu-550482369/" target="_blank">LinkedIn</a>
-    </p>
-  </footer>
+  <p>Website by HawaDigi Solution 💼</p>
 </body>
 </html>
