--- a/index.html
+++ b/index.html
@@ -4,9 +4,51 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>Exceptional Cleaning Services</title>
+  <meta name="description" content="Professional cleaning services across Port Harcourt, Lagos, Delta, Bayelsa, Edo & Akwa Ibom. 24/7 support.">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #e6f2ff;
+      color: #003366;
+      text-align: center;
+      padding: 40px;
+    }
+    h1 {
+      font-size: 2.5em;
+      color: #004080;
+    }
+    p {
+      font-size: 1.2em;
+      margin: 10px 0;
+    }
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      background-color: #cce0ff;
+      color: #003366;
+      font-size: 0.9em;
+    }
+    a {
+      color: #003366;
+      text-decoration: none;
+      margin: 0 8px;
+    }
+  </style>
 </head>
 <body>
   <h1>Welcome to Exceptional Cleaning Services</h1>
-  <p>Website by HawaDigi Solution 💼</p>
+  <p>We offer 24/7 professional cleaning in Port Harcourt, Lagos, Delta, Bayelsa, Edo & Akwa Ibom.</p>
+  <p>📞 Call us: <strong>09034290772</strong></p>
+
+  <footer>
+    <p>Website proudly developed by <strong>HawaDigi Solution 💼</strong></p>
+    <p>GRA Road, Ilorin, Nigeria</p>
+    <p>
+      <a href="https://www.facebook.com/share/1BC1VsxkYv/" target="_blank">Facebook</a> |
+      <a href="https://wa.me/2349034290772" target="_blank">WhatsApp</a> |
+      <a href="https://www.linkedin.com/in/tiamiyu-hawawu-550482369/" target="_blank">LinkedIn</a>
+    </p>
+  </footer>
 </body>
 </html>
+
